--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 <p class="frase"> veja sua sorte</p>
 
-<button class="quebrarBiscoito"onclick="quebraBiscoito()"> Quebrar biscoito  </button>
-<button class="novoBiscoito" onclick="biscoitoNovo()">Novo biscoito</button>
+<button class="quebrarBiscoito"onclick="quebraBiscoito()"> Quebrar Biscoito  </button>
+<button class="novoBiscoito" onclick="biscoitoNovo()">Novo Biscoito</button>
 
 
 
